--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "either",
-  "version": "3.1.1",
+  "version": "3.2.1",
   "description": "A more complete Either for representing a structure with two types",
   "directories": {
     "test": "tests"
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/toastal/either.git"
   },
-  "author": "Kyle J. Kress @toastal",
+  "author": "@toastal",
   "license": "BSD3",
   "bugs": {
     "url": "https://github.com/EntangledMedia/WebClient/issues"
