--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "elm": "~0.19.0",
-    "elm-test": "~0.19.0"
+    "elm": "0.19.0-bugfix1",
+    "elm-test": "^0.18.12"
   }
 }
