--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,6 @@
 
 root = true
 
-
 [*]
 end_of_line = lf
 insert_final_newline = true
@@ -10,7 +9,9 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
-
 [*.elm]
 charset = utf-8
 indent_size = 4
+
+[*.json]
+indent_size = 2
