--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "bugs": {
     "url": "https://github.com/toastal/either/issues"
   },
-  "devDependencies": {},
-  "dependencies": {
-    "elm": "~0.19.0-bugfix6",
-    "elm-test": "~0.19.0"
-  }
+  "devDependencies": {
+    "elm": "^0.19.1-3",
+    "elm-format": "^0.8.3",
+    "elm-test": "^0.19.1-revision2"
+  },
+  "dependencies": {}
 }
